--- a/gb/24/1/1/n14148786.md
+++ b/gb/24/1/1/n14148786.md
@@ -5,48 +5,40 @@
 <h6></h6>
 <hr>
 <p>【大纪元2024年01月01日讯】（大纪元记者廖素贞台湾云林报导）离总统大选日只剩12天，蓝绿两党无不铆足全力，争取最后胜利。民进党“海鲲号”大战车元旦抵达虎尾圆环，掀起护国风，除了吸引在地乡亲关注，一群越南、印尼、中国新住民妈妈也以行动力力挺台湾国防自主，捍卫国家民主与自由，国务青应援团也到场力挺。</p>
-<figure id="14148789" aria-describedby="caption-14148789" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/01/id14148789-656696-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14148789-656696-450x300.jpg" alt="国务青应援团也到场力挺。" width="601" b="400" /></a><figcaption id="caption-14148789" class="wp-caption-text">国务青应援团也到场力挺。（廖素贞／大纪元）</figcaption></figure>
+<figure id="14148789" aria-describedby="caption-14148789" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/01/id14148789-656696-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2024/01/id14148789-656696-450x300.jpg" alt="国务青应援团也到场力挺。" width="601" b="400"/></a><figcaption id="caption-14148789" class="wp-caption-text">国务青应援团也到场力挺。（廖素贞／大纪元）</figcaption></figure>
 <p>来自越南的黄小凤表示，台湾的民主、自由值得很多东南亚国家学习。感谢民进党执政以来关心这群离乡背景的妈妈们，提供多元的福利政策，让新住民妈妈能够享有诸多权利，呼吁姊妹们在1/13勇敢投出神圣的一票，让台湾不要变成第二个香港。</p>
-<figure id="attachment_14148790" aria-describedby="caption-attachment-14148790" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14148790-656697.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14148790" src="https://i.epochtimes.com/assets/uploads/2024/01/id14148790-656697-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14148790" class="wp-caption-text">民进党“海鲲号”大战车元旦抵达虎尾圆环 。呼吁民众挺台湾国防自主。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_14148790" aria-describedby="caption-attachment-14148790" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14148790-656697.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14148790" src="https://i.epochtimes.com/assets/uploads/2024/01/id14148790-656697-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14148790" class="wp-caption-text">民进党“海鲲号”大战车元旦抵达虎尾圆环 。呼吁民众挺台湾国防自主。（廖素贞／大纪元）</figcaption></figure>
 <p>曾读过军校的国务青应援团的林同学表示，国民党倾全党之力诅咒国造潜舰是铁棺材，马文君还涉嫌泄密，而该政党地方首长故意拿防卫台湾所需要的飞弹基地建置来恶意误导人民、恶意指控国军，在在令人难以接受。国军牺牲奉献应受尊敬与感恩，支持民进党赖萧配、民主大联盟的立委苏治芬，以及强化国军战备量能的民主进步党，才能捍卫台湾主权、发展国防自主。</p>
 <p>立委苏治芬指出，自由民主不仅是普世价值，也是台湾最好的国防。维护台海和平，是台湾的代志，也是世界的代志。唯有培养民间的国力，才能强化国家的国防，更不容许地方首长，以国防基地的设置恐吓镇民，覆巢之下无完卵，没有国那有家。海鲲号潜舰国造，是民进党捍卫台湾的决心，捍卫台湾海峡的安全、和平，也是民主世界共同关注的议题。</p>
 <p>责任编辑：陈玟绮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/27/n14103954.md#1">赴海大演讲 赖清德：国政蓝图都有具体作法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/17/n14118654.md#1">国舰国造轻型巡防舰开工 蔡英文：持续国防现代化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/6/n14131258.md#1">【马克时空】台湾国舰国造进展 轻巡防舰开工</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/8/n14132658.md#1">民进党启动海鲲护国辅选 力拼国会过半</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/17/n14138149.md#1">海鲲号泊港测试 黄曙光：全舰人员编装核定生效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/31/n14147979.md#1">2023年台湾十大新闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327034.md#1">2024屏东伴手礼暨好店获选名单出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327006.md#1">“第28届桃城美展”46件作品脱颖而出　</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327003.md#1">屏东南国漫读节 蓝皮解忧之旅9／11开卖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326980.md#1">三大观光圈-群山料理王料理竞赛 市长颁奖</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/12/n11108271.md#1" target="_blank">林辉：从农民吃光“忆苦饭”看中国农村真相</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11257164.md#1" target="_blank">【征文】凌晓辉：贞洁论（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295180.md#1">台湾纪录片《冲天》 国军飞行员抗日纪实</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322241.md#1">美国防部前UFO专家：外星人有入侵地球计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324783.md#1">露从今夜白！应对白露之变的养生要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325647.md#1">【未解之谜】清末两大预言解读 台海战后盛世出？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325862.md#1">台故宫特展“大美不言” 一览东西方工艺美学</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325761.md#1">【菁英论坛】内蒙李建平案 牵涉中南海两大家族</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14326137.md#1">【马克时空】普京改口提和谈 俄乌战何时停</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14326058.md#1">【时事军事】美太空军确认移动目标追踪能力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325897.md#1">中共大手笔援非洲惹怒网民 官方封杀评论</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325853.md#1">广东副省长入国务院 李克强时期秘书全换光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325953.md#1">超强台风摩羯过后 居民：海口市惨不忍睹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14325077.md#1">伊能静被儿子化网红妆 母子俩贴脸自拍如姐弟</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325261.md#1">子瑜Solo出道作夺榜单冠军 TWICE成员齐贺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/8/n14326262.md#1">精灵不会老 奥兰多布鲁再当王子得想办法“冻龄”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325684.md#1">刘嘉玲回老家吃平价美食 一身天价行头引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14326106.md#1">陆片《脑洞大开》投资5000万 首日票房仅270万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325943.md#1">专家：这3种高薪职业将来可能被AI取代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/8/n14326296.md#1">旅馆业者透露房客的6大错误 可能会多花钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14323912.md#1">冰淇淋百年流行口味一次看 你吃过几种？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14323989.md#1">【摄影天地】罕见的蓝耳翠鸟  悠游池塘边</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325848.md#1">衣服起毛球会破坏美感 如何预防？</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/1/n14148786.htm">“海鲲号”抵云林 新住民行动力挺护国</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/1/n14148786.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
